@@ -1,6 +1,8 @@
 1.8
 ---
 
+- Fixes issue #10: Send an ICS file with date information on vacation validation
+  * The approved confirmation mail sent to the employee contains the .ics file as attachment
 - Add new vacation type: Exception
   * This type is for events which are not covered by other types: like wedding, funeral, etc.
   * User must provide a reason when requesting an Exception request
